tests/ui/diagnostic_namespace/on_missing_args/message_and_label.stderr
error: pair! is missing its second argument
  --> $DIR/message_and_label.rs:15:13
   |
LL | macro_rules! pair {
   | ----------------- when calling this macro
...
LL |     pair!(u8);
   |             ^ add the missing value here
   |
note: while trying to match `,`
  --> $DIR/message_and_label.rs:10:12
   |
LL |     ($ty:ty, $value:expr) => {};
   |            ^
   = note: this macro expects a type and a value, like `pair!(u8, 0)`

error: aborting due to 1 previous error

